--- a/config/sites/default/block.block.entityviewcontent.yml
+++ b/config/sites/default/block.block.entityviewcontent.yml
@@ -20,4 +20,12 @@ settings:
   view_mode: page_header
   context_mapping:
     entity: '@node.node_route_context:node'
-visibility: {  }
+visibility:
+  'entity_bundle:node':
+    id: 'entity_bundle:node'
+    bundles:
+      page: page
+      profile: profile
+    negate: false
+    context_mapping:
+      node: '@node.node_route_context:node'
