--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -32,12 +32,20 @@ dependencies:
     - field.field.node.profile.field_rating_overall
     - node.type.profile
   module:
+    - text
     - user
 id: node.profile.default
 targetEntityType: node
 bundle: profile
 mode: default
-content: {  }
+content:
+  field_profile_board_certified:
+    weight: 1
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
 hidden:
   content_moderation_control: true
   field_affiliations_ref: true
@@ -46,7 +54,6 @@ hidden:
   field_location_ref: true
   field_medical_specialties_ref: true
   field_metatags: true
-  field_profile_board_certified: true
   field_profile_education: true
   field_profile_epic_id: true
   field_profile_first_name: true
