--- a/config/sites/default/block.block.tower_health_content.yml
+++ b/config/sites/default/block.block.tower_health_content.yml
@@ -19,7 +19,7 @@ settings:
   id: system_main_block
   label: 'Main page content'
   provider: system
-  label_display: visible
+  label_display: '0'
 visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
