--- a/config/sites/default/block.block.page_content.yml
+++ b/config/sites/default/block.block.page_content.yml
@@ -25,6 +25,7 @@ visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
+      location: location
       profile: profile
     negate: false
     context_mapping:
