sidebar hours block and provider button

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.yml
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/hours-block/hours-block.yml
@@ -1,17 +1,17 @@
 label: "Hours"
 text: "Hours may be affected by holidays"
 hours:
-  - title: "Monday"
+  - title: "Monday:"
     hours: "8 a.m. - 5 p.m."
-  - title: "Tuesday"
+  - title: "Tuesday:"
     hours: "8 a.m. - 5 p.m."
-  - title: "Wednesday"
+  - title: "Wednesday:"
     hours: "8 a.m. - 5 p.m."
-  - title: "Thursday"
+  - title: "Thursday:"
     hours: "8 a.m. - 5 p.m."
-  - title: "Friday"
+  - title: "Friday:"
     hours: "12 p.m. - 8 p.m."
-  - title: "Saturday"
+  - title: "Saturday:"
     hours: "8 a.m. - 8 p.m."
-  - title: "Sunday"
+  - title: "Sunday:"
     hours: "Closed"
