--- a/config/sites/default/block.block.tower_health_content.yml
+++ b/config/sites/default/block.block.tower_health_content.yml
@@ -3,7 +3,6 @@ langcode: en
 status: true
 dependencies:
   module:
-    - ctools
     - system
   theme:
     - tower_health
@@ -19,13 +18,5 @@ settings:
   id: system_main_block
   label: 'Main page content'
   provider: system
-  label_display: visible
-visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
-    bundles:
-      location: location
-      profile: profile
-    negate: true
-    context_mapping:
-      node: '@node.node_route_context:node'
+  label_display: '0'
+visibility: {  }
