--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -19,20 +19,31 @@ dependencies:
     - field.field.node.location.field_services_ref
     - node.type.location
   module:
+    - text
     - user
 id: node.location.default
 targetEntityType: node
 bundle: location
 mode: default
 content:
-  content_moderation_control:
+  field_location_body:
+    type: text_default
     weight: 0
     region: content
+    label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_services_ref:
+    type: entity_reference_label
+    weight: 1
+    region: content
+    label: hidden
+    settings:
+      link: true
+    third_party_settings: {  }
 hidden:
+  content_moderation_control: true
   field_location_address: true
-  field_location_body: true
   field_location_components: true
   field_location_fax: true
   field_location_find_us: true
@@ -44,6 +55,5 @@ hidden:
   field_location_phone_number: true
   field_location_type: true
   field_metatags: true
-  field_services_ref: true
   links: true
   search_api_excerpt: true
