--- a/config/sites/default/core.entity_view_display.node.profile.default.yml
+++ b/config/sites/default/core.entity_view_display.node.profile.default.yml
@@ -32,6 +32,7 @@ dependencies:
     - field.field.node.profile.field_rating_overall
     - node.type.profile
   module:
+    - entity_reference_revisions
     - text
     - user
 id: node.profile.default
@@ -39,22 +40,61 @@ targetEntityType: node
 bundle: profile
 mode: default
 content:
-  field_profile_board_certified:
+  field_area_interest_ref:
+    type: entity_reference_label
     weight: 1
-    label: above
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings: {  }
+  field_location_ref:
+    type: entity_reference_entity_view
+    weight: 2
+    region: content
+    label: hidden
+    settings:
+      view_mode: teaser_small
+      link: false
+    third_party_settings: {  }
+  field_medical_specialties_ref:
+    type: entity_reference_label
+    weight: 0
+    region: content
+    label: hidden
+    settings:
+      link: false
+    third_party_settings: {  }
+  field_profile_board_certified:
+    weight: 3
+    label: hidden
     settings: {  }
     third_party_settings: {  }
     type: text_default
     region: content
+  field_profile_education:
+    type: entity_reference_revisions_entity_view
+    weight: 4
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+  field_rating_comments_ref:
+    type: entity_reference_revisions_entity_view
+    weight: 5
+    region: content
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
 hidden:
   content_moderation_control: true
   field_affiliations_ref: true
-  field_area_interest_ref: true
   field_insurance_ref: true
-  field_location_ref: true
-  field_medical_specialties_ref: true
   field_metatags: true
-  field_profile_education: true
   field_profile_epic_id: true
   field_profile_first_name: true
   field_profile_gender: true
@@ -71,7 +111,6 @@ hidden:
   field_profile_type: true
   field_profile_video: true
   field_rating_comment_count: true
-  field_rating_comments_ref: true
   field_rating_count: true
   field_rating_overall: true
   links: true
