--- a/config/sites/default/block.block.flexible_components.yml
+++ b/config/sites/default/block.block.flexible_components.yml
@@ -1,30 +1,23 @@
-uuid: 3840ec65-4e8a-4c79-94e7-cf4c93ebde55
+uuid: 7c42de92-b2d6-4e3a-be47-bd19ebc26e25
 langcode: en
-status: false
+status: true
 dependencies:
   module:
     - ctools
   theme:
     - tower_health
-id: full_content_components
+id: flexible_components
 theme: tower_health
-region: header
+region: full_content
 weight: 0
 provider: null
 plugin: 'entity_view:node'
 settings:
   id: 'entity_view:node'
-  label: 'Entity view (Content)'
+  label: 'Flexible Components'
   provider: ctools
   label_display: '0'
   view_mode: components
   context_mapping:
     entity: '@node.node_route_context:node'
-visibility:
-  'entity_bundle:node':
-    id: 'entity_bundle:node'
-    bundles:
-      page: page
-    negate: false
-    context_mapping:
-      node: '@node.node_route_context:node'
+visibility: {  }
