--- a/config/sites/default/block.block.tower_health_page_title.yml
+++ b/config/sites/default/block.block.tower_health_page_title.yml
@@ -25,6 +25,7 @@ visibility:
     bundles:
       page: page
       profile: profile
+      service: service
     negate: true
     context_mapping:
       node: '@node.node_route_context:node'
