--- a/config/sites/default/core.entity_view_display.node.service.components.yml
+++ b/config/sites/default/core.entity_view_display.node.service.components.yml
@@ -1,9 +1,9 @@
-uuid: 068861c5-f07c-4efa-a275-e7e5fb5e757e
+uuid: fba4f8bd-743b-4aba-9cbe-4d2c50e43bb7
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.components
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
@@ -18,24 +18,24 @@ dependencies:
     - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
+    - entity_reference_revisions
     - user
-id: node.service.teaser
+id: node.service.components
 targetEntityType: node
 bundle: service
-mode: teaser
+mode: components
 content:
-  content_moderation_control:
-    weight: -20
-    settings: {  }
-    third_party_settings: {  }
+  field_service_flex:
+    type: entity_reference_revisions_entity_view
+    weight: 0
     region: content
-  links:
-    weight: 100
-    settings: {  }
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
     third_party_settings: {  }
-    region: content
 hidden:
-  field_area_of_care_ref: true
+  content_moderation_control: true
   field_body: true
   field_conditions_ref: true
   field_location_ref: true
@@ -43,9 +43,9 @@ hidden:
   field_metatags: true
   field_service_core_bool: true
   field_service_core_ref: true
-  field_service_flex: true
   field_service_header: true
   field_service_headline: true
   field_service_intro: true
   field_service_related_ref: true
+  links: true
   search_api_excerpt: true
