--- a/config/sites/default/field.field.paragraph.recognition_card.field_recog_card_image.yml
+++ b/config/sites/default/field.field.paragraph.recognition_card.field_recog_card_image.yml
@@ -12,7 +12,7 @@ entity_type: paragraph
 bundle: recognition_card
 label: Image
 description: 'What image would you like to include?'
-required: true
+required: false
 translatable: false
 default_value: {  }
 default_value_callback: ''
