--- a/config/sites/default/block.block.entityviewcontent_sidebar_bottom.yml
+++ b/config/sites/default/block.block.entityviewcontent_sidebar_bottom.yml
@@ -25,6 +25,7 @@ visibility:
     id: 'entity_bundle:node'
     bundles:
       page: page
+      service: service
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
