--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_card_cta
+    - field.field.node.location.field_location_card_desc
+    - field.field.node.location.field_location_card_image
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -20,7 +23,6 @@ dependencies:
     - node.type.location
     - workflows.workflow.default
   module:
-    - address
     - content_moderation
     - field_group
     - geofield
@@ -40,6 +42,7 @@ third_party_settings:
         - group_flexible_components
         - group_how_to_find_us
         - group_insurance
+        - group_card_data
       parent_name: ''
       weight: 0
       format_type: tabs
@@ -89,7 +92,7 @@ third_party_settings:
       children:
         - field_services_ref
       parent_name: group_vertical_tabs
-      weight: 27
+      weight: 25
       format_type: tab
       format_settings:
         id: ''
@@ -103,7 +106,7 @@ third_party_settings:
       children:
         - field_location_components
       parent_name: group_vertical_tabs
-      weight: 28
+      weight: 26
       format_type: tab
       format_settings:
         id: ''
@@ -117,7 +120,7 @@ third_party_settings:
       children:
         - field_location_find_us
       parent_name: group_vertical_tabs
-      weight: 29
+      weight: 27
       format_type: tab
       format_settings:
         id: ''
@@ -131,7 +134,7 @@ third_party_settings:
       children:
         - field_location_insurance
       parent_name: group_vertical_tabs
-      weight: 30
+      weight: 28
       format_type: tab
       format_settings:
         id: ''
@@ -141,6 +144,21 @@ third_party_settings:
         required_fields: true
       label: 'Insurance Information'
       region: content
+    group_card_data:
+      children:
+        - field_location_card_image
+        - field_location_card_desc
+      parent_name: group_vertical_tabs
+      weight: 29
+      format_type: tab
+      region: content
+      format_settings:
+        id: ''
+        classes: ''
+        description: ''
+        formatter: closed
+        required_fields: true
+      label: 'Card Data'
 id: node.location.default
 targetEntityType: node
 bundle: location
@@ -148,7 +166,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -169,6 +187,29 @@ content:
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
+    region: content
+  field_location_card_cta:
+    weight: 36
+    settings:
+      size: 60
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textfield
+    region: content
+  field_location_card_desc:
+    weight: 13
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: text_textarea
+    region: content
+  field_location_card_image:
+    type: media_library_widget
+    weight: 12
+    settings:
+      media_types: {  }
+    third_party_settings: {  }
     region: content
   field_location_components:
     type: entity_reference_paragraphs
@@ -263,7 +304,7 @@ content:
     type: options_select
     region: content
   field_metatags:
-    weight: 31
+    weight: 10
     settings: {  }
     third_party_settings: {  }
     type: metatag_firehose
@@ -280,13 +321,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 7
+    weight: 8
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 5
+    weight: 6
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -294,21 +335,21 @@ content:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 3
+    weight: 4
     region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 6
+    weight: 7
     region: content
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
     settings:
       display_label: true
-    weight: 4
+    weight: 5
     region: content
     third_party_settings: {  }
   title:
@@ -323,7 +364,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 1
+    weight: 2
     settings:
       match_operator: CONTAINS
       size: 60
@@ -332,7 +373,7 @@ content:
     region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 8
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
