--- a/config/sites/default/core.entity_view_display.node.location.default.yml
+++ b/config/sites/default/core.entity_view_display.node.location.default.yml
@@ -5,6 +5,9 @@ dependencies:
   config:
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_card_cta
+    - field.field.node.location.field_location_card_desc
+    - field.field.node.location.field_location_card_image
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
@@ -44,6 +47,9 @@ content:
 hidden:
   content_moderation_control: true
   field_location_address: true
+  field_location_card_cta: true
+  field_location_card_desc: true
+  field_location_card_image: true
   field_location_components: true
   field_location_fax: true
   field_location_find_us: true
