--- a/config/sites/default/core.entity_view_display.node.location.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.location.teaser.yml
@@ -6,15 +6,20 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.location.field_location_address
     - field.field.node.location.field_location_body
+    - field.field.node.location.field_location_card_cta
+    - field.field.node.location.field_location_card_desc
+    - field.field.node.location.field_location_card_image
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
     - field.field.node.location.field_location_find_us
+    - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
     - field.field.node.location.field_location_insurance
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_type
+    - field.field.node.location.field_metatags
     - field.field.node.location.field_services_ref
     - image.style.thumbnail
     - node.type.location
@@ -66,6 +71,9 @@ content:
     third_party_settings: {  }
 hidden:
   field_location_body: true
+  field_location_card_cta: true
+  field_location_card_desc: true
+  field_location_card_image: true
   field_location_components: true
   field_location_find_us: true
   field_location_geo: true
