add service reference cards

--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -148,6 +148,7 @@ third_party_settings:
       children:
         - field_location_card_image
         - field_location_card_desc
+        - field_location_card_cta
       parent_name: group_vertical_tabs
       weight: 29
       format_type: tab
@@ -189,7 +190,7 @@ content:
     type: text_textarea
     region: content
   field_location_card_cta:
-    weight: 36
+    weight: 14
     settings:
       size: 60
       placeholder: ''
