--- a/config/sites/default/core.entity_view_display.node.service.default.yml
+++ b/config/sites/default/core.entity_view_display.node.service.default.yml
@@ -7,18 +7,21 @@ dependencies:
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
     - field.field.node.service.field_medical_specialties_ref
+    - field.field.node.service.field_metatags
+    - field.field.node.service.field_service_card_cta
+    - field.field.node.service.field_service_card_desc
+    - field.field.node.service.field_service_card_image
     - field.field.node.service.field_service_core_bool
     - field.field.node.service.field_service_core_ref
     - field.field.node.service.field_service_flex
     - field.field.node.service.field_service_headline
     - field.field.node.service.field_service_intro
     - field.field.node.service.field_service_related_ref
-    - field.field.node.service.field_metatags
     - node.type.service
   module:
     - entity_reference_revisions
-    - options
     - metatag
+    - options
     - text
     - user
 id: node.service.default
@@ -60,6 +63,30 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: metatag_empty_formatter
+    region: content
+  field_service_card_cta:
+    weight: 114
+    label: above
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_service_card_desc:
+    weight: 112
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: text_default
+    region: content
+  field_service_card_image:
+    type: entity_reference_entity_view
+    weight: 113
+    label: above
+    settings:
+      view_mode: default
+      link: false
+    third_party_settings: {  }
     region: content
   field_service_core_bool:
     weight: 107
