--- a/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
+++ b/config/sites/default/core.entity_view_display.node.service.image_box_reference.yml
@@ -1,9 +1,9 @@
-uuid: 068861c5-f07c-4efa-a275-e7e5fb5e757e
+uuid: 23bf74d6-716c-49a0-b269-89796212b5ec
 langcode: en
 status: true
 dependencies:
   config:
-    - core.entity_view_mode.node.teaser
+    - core.entity_view_mode.node.image_box_reference
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_location_ref
@@ -20,36 +20,49 @@ dependencies:
     - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
+    - text
     - user
-id: node.service.teaser
+id: node.service.image_box_reference
 targetEntityType: node
 bundle: service
-mode: teaser
+mode: image_box_reference
 content:
-  content_moderation_control:
-    weight: -20
+  field_service_card_cta:
+    weight: 2
+    label: hidden
+    settings:
+      link_to_entity: false
+    third_party_settings: {  }
+    type: string
+    region: content
+  field_service_card_desc:
+    weight: 0
+    label: hidden
     settings: {  }
     third_party_settings: {  }
+    type: text_default
     region: content
-  links:
-    weight: 100
-    settings: {  }
+  field_service_card_image:
+    type: entity_reference_entity_view
+    weight: 1
+    label: hidden
+    settings:
+      view_mode: default
+      link: false
     third_party_settings: {  }
     region: content
 hidden:
-  field_area_of_care_ref: true
+  content_moderation_control: true
   field_body: true
   field_conditions_ref: true
   field_location_ref: true
   field_medical_specialties_ref: true
   field_metatags: true
-  field_service_card_cta: true
-  field_service_card_desc: true
-  field_service_card_image: true
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
   field_service_headline: true
   field_service_intro: true
   field_service_related_ref: true
+  links: true
   search_api_excerpt: true
