update help text

--- a/config/sites/default/field.field.paragraph.card.field_card_description.yml
+++ b/config/sites/default/field.field.paragraph.card.field_card_description.yml
@@ -10,7 +10,7 @@ field_name: field_card_description
 entity_type: paragraph
 bundle: card
 label: Description
-description: 'The message you''re trying to define.'
+description: ''
 required: false
 translatable: false
 default_value: {  }
