--- a/config/sites/default/field.field.paragraph.card.field_card_image.yml
+++ b/config/sites/default/field.field.paragraph.card.field_card_image.yml
@@ -11,7 +11,7 @@ field_name: field_card_image
 entity_type: paragraph
 bundle: card
 label: Image
-description: 'Image to display within your content section.'
+description: ''
 required: false
 translatable: false
 default_value: {  }
