--- a/config/sites/default/field.field.paragraph.card.field_card_title.yml
+++ b/config/sites/default/field.field.paragraph.card.field_card_title.yml
@@ -10,7 +10,7 @@ field_name: field_card_title
 entity_type: paragraph
 bundle: card
 label: Title
-description: 'The main "title" to display.'
+description: ''
 required: false
 translatable: false
 default_value: {  }
