--- a/config/sites/default/core.entity_view_display.node.service.sidebar_first.yml
+++ b/config/sites/default/core.entity_view_display.node.service.sidebar_first.yml
@@ -1,8 +1,9 @@
-uuid: d0784933-92bf-49e1-a75a-19573b5c1056
+uuid: 08407c16-e95a-4b10-aebe-266b422d4039
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.sidebar_first
     - field.field.node.service.field_body
     - field.field.node.service.field_conditions_ref
     - field.field.node.service.field_metatags
@@ -15,58 +16,30 @@ dependencies:
     - field.field.node.service.field_service_related_ref
     - node.type.service
   module:
-    - metatag
-    - text
     - user
-id: node.service.default
+id: node.service.sidebar_first
 targetEntityType: node
 bundle: service
-mode: default
+mode: sidebar_first
 content:
-  content_moderation_control:
+  field_conditions_ref:
+    type: entity_reference_label
     weight: 0
     region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_body:
-    weight: 4
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  field_metatags:
-    weight: 5
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: metatag_empty_formatter
-    region: content
-  field_service_headline:
-    weight: 2
     label: hidden
     settings:
-      link_to_entity: false
-    third_party_settings: {  }
-    type: string
-    region: content
-  field_service_intro:
-    weight: 3
-    label: hidden
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
-    region: content
-  links:
-    weight: 1
-    region: content
-    settings: {  }
+      link: true
     third_party_settings: {  }
 hidden:
-  field_conditions_ref: true
+  content_moderation_control: true
+  field_body: true
+  field_metatags: true
   field_service_core_bool: true
   field_service_core_ref: true
   field_service_flex: true
   field_service_header: true
+  field_service_headline: true
+  field_service_intro: true
   field_service_related_ref: true
+  links: true
   search_api_excerpt: true
