--- a/config/sites/default/search_api.index.acquia_search_index.yml
+++ b/config/sites/default/search_api.index.acquia_search_index.yml
@@ -239,6 +239,10 @@ field_settings:
           areas_of_care: ''
           condition: ''
           medical_specialty: ''
+  service_medical_specialty_field:
+    label: 'Service medical specialty field'
+    property_path: service_medical_specialty_field
+    type: string
   synonym:
     label: Synonyms
     datasource_id: 'entity:taxonomy_term'
@@ -315,6 +319,7 @@ processor_settings:
       - provider_specialties_name
       - provider_specialties_name_string
       - rendered_item
+      - service_medical_specialty_field
       - synonym
       - title
       - type
@@ -322,9 +327,11 @@ processor_settings:
     weights:
       preprocess_index: -20
       preprocess_query: -20
+  language_with_fallback: {  }
   provider_sort_field: {  }
   rendered_item: {  }
   reverse_entity_references: {  }
+  service_medical_specialty_field: {  }
 tracker_settings:
   default:
     indexing_order: fifo
