Fix sidebar and code cleanup.

--- a/config/sites/default/block.block.sidebar_first.yml
+++ b/config/sites/default/block.block.sidebar_first.yml
@@ -25,6 +25,7 @@ visibility:
     id: 'entity_bundle:node'
     bundles:
       profile: profile
+      service: service
     negate: false
     context_mapping:
       node: '@node.node_route_context:node'
