--- a/config/sites/default/field.storage.paragraph.field_basic_header_style.yml
+++ b/config/sites/default/field.storage.paragraph.field_basic_header_style.yml
@@ -13,10 +13,10 @@ settings:
   allowed_values:
     -
       value: default
-      label: default
+      label: Default
     -
       value: secondary
-      label: secondary
+      label: Shaded
   allowed_values_function: ''
 module: options
 locked: false
