--- a/config/sites/default/field.field.paragraph.basic_header.field_basic_header_style.yml
+++ b/config/sites/default/field.field.paragraph.basic_header.field_basic_header_style.yml
@@ -11,11 +11,13 @@ id: paragraph.basic_header.field_basic_header_style
 field_name: field_basic_header_style
 entity_type: paragraph
 bundle: basic_header
-label: Style
-description: ''
-required: false
+label: 'Background Color'
+description: 'Adjusts the background color of the header.'
+required: true
 translatable: false
-default_value: {  }
+default_value:
+  -
+    value: default
 default_value_callback: ''
 settings: {  }
 field_type: list_string
