--- a/config/sites/default/core.entity_view_display.node.article.teaser.yml
+++ b/config/sites/default/core.entity_view_display.node.article.teaser.yml
@@ -7,7 +7,7 @@ dependencies:
     - field.field.node.article.body
     - field.field.node.article.field_article_date
     - field.field.node.article.field_article_teaser
-    - field.field.node.article.field_metatags
+    - field.field.node.article.field_article_type_ref
     - node.type.article
   module:
     - text
@@ -33,5 +33,5 @@ content:
 hidden:
   field_article_date: true
   field_article_teaser: true
-  field_metatags: true
+  field_article_type_ref: true
   search_api_excerpt: true
