--- a/config/sites/default/node.type.article.yml
+++ b/config/sites/default/node.type.article.yml
@@ -14,7 +14,7 @@ third_party_settings:
     title_help: ''
 name: Article
 type: article
-description: ''
+description: 'Displays news content'
 help: ''
 new_revision: true
 preview_mode: 1
