set lnks to unlimited for image teaser banner

--- a/config/sites/default/field.field.paragraph.image_teaser_banner.field_image_banner_links.yml
+++ b/config/sites/default/field.field.paragraph.image_teaser_banner.field_image_banner_links.yml
@@ -12,7 +12,7 @@ field_name: field_image_banner_links
 entity_type: paragraph
 bundle: image_teaser_banner
 label: Links
-description: ''
+description: 'Add up to 4 links to display on this banner'
 required: false
 translatable: false
 default_value: {  }
