--- a/config/sites/default/block.block.sidebar_first.yml
+++ b/config/sites/default/block.block.sidebar_first.yml
@@ -24,6 +24,7 @@ visibility:
   'entity_bundle:node':
     id: 'entity_bundle:node'
     bundles:
+      location: location
       profile: profile
     negate: false
     context_mapping:
