--- a/config/sites/default/core.entity_form_display.node.location.default.yml
+++ b/config/sites/default/core.entity_form_display.node.location.default.yml
@@ -10,12 +10,10 @@ dependencies:
     - field.field.node.location.field_location_card_image
     - field.field.node.location.field_location_components
     - field.field.node.location.field_location_fax
-    - field.field.node.location.field_location_find_us
     - field.field.node.location.field_location_geo
     - field.field.node.location.field_location_hours
     - field.field.node.location.field_location_id
     - field.field.node.location.field_location_image
-    - field.field.node.location.field_location_insurance
     - field.field.node.location.field_location_phone_number
     - field.field.node.location.field_location_type
     - field.field.node.location.field_metatags
@@ -28,6 +26,7 @@ dependencies:
     - geofield
     - media_library
     - metatag
+    - office_hours
     - paragraphs
     - path
     - readonly_field_widget
@@ -234,18 +233,6 @@ content:
     third_party_settings: {  }
     type: readonly_field_widget
     region: content
-  field_location_find_us:
-    type: entity_reference_paragraphs
-    weight: 18
-    settings:
-      title: Paragraph
-      title_plural: Paragraphs
-      edit_mode: closed
-      add_mode: dropdown
-      form_display_mode: default
-      default_paragraph_type: _none
-    third_party_settings: {  }
-    region: content
   field_location_geo:
     weight: 15
     settings:
@@ -255,13 +242,9 @@ content:
     region: content
   field_location_hours:
     weight: 18
-    settings:
-      label: above
-      formatter_type: null
-      formatter_settings: null
-      show_description: false
+    settings: {  }
     third_party_settings: {  }
-    type: readonly_field_widget
+    type: office_hours_default
     region: content
   field_location_id:
     weight: 13
@@ -279,14 +262,6 @@ content:
     settings:
       media_types: {  }
     third_party_settings: {  }
-    region: content
-  field_location_insurance:
-    weight: 19
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
     region: content
   field_location_phone_number:
     weight: 16
